--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!--Header-->
   <header id="splashscreen" class="grid">
     <div class="content-wrap">
-      <img src="images/splashscreen.jpg" alt="screen">
+      <img src="images/logo.jpg" alt="screen">
     </div>
 
   </header>
