--- a/members.html
+++ b/members.html
@@ -1,29 +1,89 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Viynl Waste</title>
+  <title>Vinyl Waste</title>
+  <link rel="stylesheet" href="members.css">
   <link rel="stylesheet" href="format.css">
-  <link rel="stylesheet" href="index.css">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 
 <body>
 
-  <nav>
-    <li><a href="index.html" class="green">HOME</a></li>
-    <li><a href="members.html">THE MEMBERS</a></li>
-  </nav>
+  <!--Header-->
+  <header id="splashscreen" class="grid">
+    <div class="content-wrap">
+      <img src="images/logo.jpg" alt="screen">
+    </div>
+
+  </header>
 
 
+  <!--Main-->
 
-  <footer>
-    &copy 2018 by vinlyWASTE
+  <main id="main">
+
+    <!--Section A-->
+    <section id="a" class="grid">
+      <div class="content-wrap">
+        <a href="https://www.apple.com/music/" class="btn">LISTEN TO OUR MUSIC</a>
+      </div>
+    </section>
+
+
+    <!--Section B-->
+
+    <section id="b" class="grid">
+      <div class="content-text">
+        <nav class="bar">
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="members.html">THE MEMBERS</a></li>
+          <li><a href="https://www.instagram.com/?hl=en"><img src="images/instagramlogo.png" alt="instagram logo" class="link"></a></li>
+          <li><a href="https://twitter.com/?lang=en"><img src="images/twitterlogo.png" alt="instagram logo" class="link"></a></li>
+          <li><a href="https://www.youtube.com/"><img src="images/youtubelogo.png" alt="instagram logo" class="link"></a></li>
+        </nav>
+      </div>
+    </section>
+
+    <hr width="50%">
+
+    <!--Section C-->
+
+    <section id="c" class="grid">
+      <div class="content-wrap">
+        <h1>Meet the Members</h1>
+      </div>
+    </section>
+
+    <!--Section D-->
+    <section id="d" class="grid">
+      <div class="content-wrap">
+        <div class="profile"><img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="">
+          <div class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel magni ipsam voluptatem assumenda! Dolor, nihil suscipit explicabo atque architecto culpa!</div>
+        </div>
+
+        <div class="profile"><img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="">
+          <div class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi dicta laboriosam animi quo explicabo, fuga, unde aspernatur architecto beatae voluptas?</div>
+        </div>
+        <div class="profile"><img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="">
+          <div class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores numquam recusandae dolorum nulla sed hic veniam soluta ipsum voluptas reiciendis.</div>
+        </div>
+        <div class="profile"><img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="">
+          <div class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum officiis explicabo provident, illo rerum itaque eligendi excepturi animi at harum!</div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!--Footer-->
+  <footer class="content-wrap">
+    <div>
+      <div>&copy 2018 by vinlyWASTE</div>
+      <div>Project by Dylan Bloodworth</div>
+    </div>
   </footer>
-
 </body>
 
 </html>
