--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Vinyl Waste</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="format.css">
 </head>
 
 <body>
@@ -25,20 +26,23 @@
   <main id="main">
 
     <!--Section A-->
-    <section id="section-a" class="grid">
-    <div class="content-wrap">
-      <a href="https://www.apple.com/music/" class="btn">LISTEN TO OUR MUSIC</a>
-    </div>
+    <section id="a" class="grid">
+      <div class="content-wrap">
+        <a href="https://www.apple.com/music/" class="btn">LISTEN TO OUR MUSIC</a>
+      </div>
     </section>
 
 
     <!--Section B-->
 
-    <section id="section-b" class="grid">
+    <section id="b" class="grid">
       <div class="content-text">
         <nav class="bar">
-          <li><a href="index2.html">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
           <li><a href="members.html">THE MEMBERS</a></li>
+          <li><a href="https://www.instagram.com/?hl=en"><img src="images/instagramlogo.png" alt="instagram logo" class="link"></a></li>
+          <li><a href="https://twitter.com/?lang=en"><img src="images/twitterlogo.png" alt="instagram logo" class="link"></a></li>
+          <li><a href="https://www.youtube.com/"><img src="images/youtubelogo.png" alt="instagram logo" class="link" ></a></li>
         </nav>
       </div>
 
@@ -47,9 +51,9 @@
     <hr width="50%">
 
     <!--Section C-->
-    <section id="section-c" class="grid">
+    <section id="c" class="grid">
       <div class="content-wrap">
-        <h3>Who is vinylWASTE?</h3>
+        <h1>Who is vinylWASTE?</h1>
         <div class="content-text">
           <p>Haymarket, Virginia’s vinylWASTE is living proof that raw talent, ambition, and honesty can still succeed in an ailing music industry. By aligning their unwavering dedication to the do-it-yourself work ethic with a signature sound, members of
             the band provide a unique variety of sounds and genres that cannot be found anywhere else, ranging from jazz, funk, hip hop, and electronic
@@ -59,13 +63,29 @@
     </section>
 
     <!--Section D-->
-    <section id="section-d" class="grid">
+    <section id="d" class="grid">
       <div class="content-wrap">
-        <h3>Contact Us</h3>
-        <div class="content-text">
+
+        <div class="d-1">
+          <h3>Contact Us</h3>
           <p>If you wish to contact anyone in the band, please feel free to contact us at this email or phone number: </p>
           <p>Email: vinlyWASTE@gmail.com | Phone: 555-666-7890</p>
           <p> Any questions relating to music are strong appreciated</p>
+        </div>
+
+        <div class="d-2">
+
+          <h4>Subscribe</h4>
+          <p style="font-size: 12px; padding-top: 0; padding-bottom: 1em;">(Recieve notifications when new music is released)</p>
+
+          <form method="post" action="http://ss1.ciwcertified.com/cgi-bin/process.pl">
+            Email Address:
+            <input type="text" name="FullName"><br><br> Tell us how we can improve our site!<br>
+            <textarea name="Input" rows="3em" cols="40%"></textarea><br><br> Would you like to recieve extra promotional opportunities and updates?<br>
+            <input type="radio" name="extras" value="yes">Yes <input type="radio" name="extras" value="no">No<br><br>
+            <input type="submit" value="Sumbit">
+          </form>
+
         </div>
       </div>
     </section>
