--- a/index.html
+++ b/index.html
@@ -36,13 +36,10 @@
     <!--Section B-->
 
     <section id="b" class="grid">
-      <div class="content-text">
+      <div class="content-wrap">
         <nav class="bar">
           <li><a href="index.html">HOME</a></li>
           <li><a href="members.html">THE MEMBERS</a></li>
-          <li><a href="https://www.instagram.com/?hl=en"><img src="images/instagramlogo.png" alt="instagram logo" class="link"></a></li>
-          <li><a href="https://twitter.com/?lang=en"><img src="images/twitterlogo.png" alt="instagram logo" class="link"></a></li>
-          <li><a href="https://www.youtube.com/"><img src="images/youtubelogo.png" alt="instagram logo" class="link" ></a></li>
         </nav>
       </div>
 
@@ -54,7 +51,7 @@
     <section id="c" class="grid">
       <div class="content-wrap">
         <h1>Who is vinylWASTE?</h1>
-        <div class="content-text">
+        <div class="content-wrap">
           <p>Haymarket, Virginia’s vinylWASTE is living proof that raw talent, ambition, and honesty can still succeed in an ailing music industry. By aligning their unwavering dedication to the do-it-yourself work ethic with a signature sound, members of
             the band provide a unique variety of sounds and genres that cannot be found anywhere else, ranging from jazz, funk, hip hop, and electronic
           </p>
@@ -68,9 +65,16 @@
 
         <div class="d-1">
           <h3>Contact Us</h3>
-          <p>If you wish to contact anyone in the band, please feel free to contact us at this email or phone number: </p>
-          <p>Email: vinlyWASTE@gmail.com | Phone: 555-666-7890</p>
-          <p> Any questions relating to music are strong appreciated</p>
+          <ul>
+            <li><a href="https://www.instagram.com/?hl=en"><img src="images/instagramlogo.png" alt="instagram logo" class="link"></a></li>
+            <li><a href="https://twitter.com/?lang=en"><img src="images/twitterlogo.png" alt="instagram logo" class="link"></a></li>
+            <li><a href="https://www.youtube.com/"><img src="images/youtubelogo.png" alt="instagram logo" class="link"></a></li>
+          </ul>
+          <div class="d-text">
+            <p>Please feel free to also contact us through our email or phone number: </p>
+            <p>Email: vinlyWASTE@gmail.com | Phone: 555-666-7890</p>
+            <p> Any questions relating to music are strong appreciated</p>
+          </div>
         </div>
 
         <div class="d-2">
