--- a/members.html
+++ b/members.html
@@ -36,13 +36,12 @@
     <!--Section B-->
 
     <section id="b" class="grid">
-      <div class="content-text">
+      <div class="content-wrap">
         <nav class="bar">
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="members.html">THE MEMBERS</a></li>
-          <li><a href="https://www.instagram.com/?hl=en"><img src="images/instagramlogo.png" alt="instagram logo" class="link"></a></li>
-          <li><a href="https://twitter.com/?lang=en"><img src="images/twitterlogo.png" alt="instagram logo" class="link"></a></li>
-          <li><a href="https://www.youtube.com/"><img src="images/youtubelogo.png" alt="instagram logo" class="link"></a></li>
+
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="members.html">THE MEMBERS</a></li>
+
         </nav>
       </div>
     </section>
