--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!--Section A-->
     <section id="a" class="grid">
       <div class="content-wrap">
-        <a href="https://www.apple.com/music/" class="btn">LISTEN TO OUR MUSIC</a>
+        <a href="music.html" class="btn">LISTEN TO OUR MUSIC</a>
       </div>
     </section>
 
@@ -98,10 +98,10 @@
   <!--Footer-->
   <footer class="content-wrap">
     <div>
-      <div>&copy 2018 by vinlyWASTE</div>
-      <div>Project by Dylan Bloodworth</div>
+      <p><a href="#splashscreen">Back to the Top</a><br><br>
+      &copy 2018 by vinlyWASTE<br>
+      Project by Dylan Bloodworth</p>
     </div>
   </footer>
 </body>
-
 </html>
