--- a/members.html
+++ b/members.html
@@ -28,7 +28,7 @@
     <!--Section A-->
     <section id="a" class="grid">
       <div class="content-wrap">
-        <a href="https://www.apple.com/music/" class="btn">LISTEN TO OUR MUSIC</a>
+        <a href="music.html" class="btn">LISTEN TO OUR MUSIC</a>
       </div>
     </section>
 
@@ -38,10 +38,8 @@
     <section id="b" class="grid">
       <div class="content-wrap">
         <nav class="bar">
-
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="members.html">THE MEMBERS</a></li>
-
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="members.html">THE MEMBERS</a></li>
         </nav>
       </div>
     </section>
@@ -59,19 +57,20 @@
     <!--Section D-->
     <section id="d" class="grid">
       <div class="content-wrap">
-        <div class="profile"><img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="">
-          <div class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel magni ipsam voluptatem assumenda! Dolor, nihil suscipit explicabo atque architecto culpa!</div>
+        <div class="profile"><img src="images/people/dylan.png" alt="">
+          <div class="info">Dylan is the creator of the band. He is the backbone of the rhythm section and has been playing drum for almost 8 years. <br><br> "Boop Boop Doop I play drums."</div>
+        </div>
+        <div class="profile"><img src="images/people/jaichint.png" alt="">
+          <div class="info">Jaichint is the saxophone player and specializes in amazing solos and technically musical licks.<br><br>"I play drum on pans as little kid. Then I play saxophone as lder little kid. Now I play saxophone and drums as older kid."</div>
+        </div>
+        <div class="profile"><img src="images/people/dennis.png" alt="">
+          <div class="info">Dennis is the main audio engineer and producer. His roles include setting up recording equipment and mixing the music tracks.<br><br>"I played violin until quit and started to produce beats using the DAW electronically through Fruit Loops."</div>
+        </div>
+        <div class="profile"><img src="images/people/connor.png" alt="">
+          <div class="info">Connor is the singer whose low voice provides a great contrast to the instrumentalists. He also helps with audio engineering.<br><br> "I've been singing in the shower and car for my entire life, but I started choir in 6th grade and haven't stopped
+            since."</div>
         </div>
 
-        <div class="profile"><img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="">
-          <div class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi dicta laboriosam animi quo explicabo, fuga, unde aspernatur architecto beatae voluptas?</div>
-        </div>
-        <div class="profile"><img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="">
-          <div class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores numquam recusandae dolorum nulla sed hic veniam soluta ipsum voluptas reiciendis.</div>
-        </div>
-        <div class="profile"><img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="">
-          <div class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum officiis explicabo provident, illo rerum itaque eligendi excepturi animi at harum!</div>
-        </div>
       </div>
     </section>
   </main>
@@ -79,8 +78,9 @@
   <!--Footer-->
   <footer class="content-wrap">
     <div>
-      <div>&copy 2018 by vinlyWASTE</div>
-      <div>Project by Dylan Bloodworth</div>
+      <p><a href="#splashscreen">Back to the Top</a><br><br>
+      &copy 2018 by vinlyWASTE<br>
+      Project by Dylan Bloodworth</p>
     </div>
   </footer>
 </body>
