--- a/members.html
+++ b/members.html
@@ -67,8 +67,7 @@
           <div class="info">Dennis is the main audio engineer and producer. His roles include setting up recording equipment and mixing the music tracks.<br><br>"I played violin until quit and started to produce beats using the DAW electronically through Fruit Loops."</div>
         </div>
         <div class="profile"><img src="images/people/connor.png" alt="">
-          <div class="info">Connor is the singer whose low voice provides a great contrast to the instrumentalists. He also helps with audio engineering.<br><br> "I've been singing in the shower and car for my entire life, but I started choir in 6th grade and haven't stopped
-            since."</div>
+          <div class="info">Connor is the singer whose low voice provides a great contrast to the instrumentalists. He also helps with audio engineering.<br><br> "I've been singing in the shower and car for my entire life, but I started choir in 6th grade and haven't stoppedsince."</div>
         </div>
 
       </div>
@@ -78,9 +77,7 @@
   <!--Footer-->
   <footer class="content-wrap">
     <div>
-      <p><a href="#splashscreen">Back to the Top</a><br><br>
-      &copy 2018 by vinlyWASTE<br>
-      Project by Dylan Bloodworth</p>
+      <p><a href="#splashscreen">Back to the Top</a><br><br> &copy 2018 by vinlyWASTE<br> Project by Dylan Bloodworth</p>
     </div>
   </footer>
 </body>
