--- a/music.html
+++ b/music.html
@@ -93,7 +93,7 @@
           <div class="media">
             <p>Super Mario Galaxy</p>
             <video controls>
-            <source src="video/mario.mp4" type="video/mp4">
+            <source src="video/wii.mp4" type="video/mp4">
           </video>
           </div>
         </td>
