--- a/music.html
+++ b/music.html
@@ -91,7 +91,7 @@
       <tr>
         <td>
           <div class="media">
-            <p>Super Mario Galaxy</p>
+            <p>Mii Theme Song</p>
             <video controls>
             <source src="video/wii.mp4" type="video/mp4">
           </video>
