--- a/members.html
+++ b/members.html
@@ -59,15 +59,33 @@
       <div class="content-wrap">
         <div class="profile"><img src="images/people/dylan.png" alt="">
           <div class="info">Dylan is the creator of the band. He is the backbone of the rhythm section and has been playing drum for almost 8 years. <br><br> "Boop Boop Doop I play drums."</div>
+          <ul>
+            <li><a href="https://www.instagram.com/mrdsb_/"><img src="images/instagramlogo.png" alt="instagram logo" class="link"></a></li>
+            <li><a href="https://soundcloud.com/vinylwaste"><img src="images/soundcloud.png" alt="soundcloud logo" class="link"></a></li>
+          </ul>
         </div>
         <div class="profile"><img src="images/people/jaichint.png" alt="">
-          <div class="info">Jaichint is the saxophone player and specializes in amazing solos and technically musical licks.<br><br>"I play drum on pans as little kid. Then I play saxophone as lder little kid. Now I play saxophone and drums as older kid."</div>
+          <div class="info">Jaichint is the saxophone player and specializes in amazing solos and technically musical licks.<br><br>"I play drum on pans as little kid. Then I play saxophone as older little kid. Now I play saxophone and drums as older kid."</div>
+          <ul>
+            <li><a href="https://www.instagram.com/hwakient/"><img src="images/instagramlogo.png" alt="instagram logo" class="link"></a></li>
+            <li><a href="https://twitter.com/Hwakient?lang=en"><img src="images/twitterlogo.png" alt="twitter logo" class="link"></a></li>
+            <li><a href="https://soundcloud.com/vinylwaste"><img src="images/soundcloud.png" alt="soundcloud logo" class="link"></a></li>
+          </ul>
         </div>
         <div class="profile"><img src="images/people/dennis.png" alt="">
-          <div class="info">Dennis is the main audio engineer and producer. His roles include setting up recording equipment and mixing the music tracks.<br><br>"I played violin until quit and started to produce beats using the DAW electronically through Fruit Loops."</div>
+          <div class="info">Dennis is the main audio engineer and producer. His roles include setting up recording equipment and mixing the music tracks.<br><br>"I played violin until I decided to quit and start to produce beats using the DAW electronically through Fruit Loops."</div>
+          <ul>
+            <li><a href="https://www.instagram.com/roqrule/?hl=en"><img src="images/instagramlogo.png" alt="instagram logo" class="link"></a></li>
+            <li><a href="https://twitter.com/Roqrule"><img src="images/twitterlogo.png" alt="twitter logo" class="link"></a></li>
+            <li><a href="https://soundcloud.com/codyroses"><img src="images/soundcloud.png" alt="soundcloud logo" class="link"></a></li>
+          </ul>
         </div>
         <div class="profile"><img src="images/people/connor.png" alt="">
           <div class="info">Connor is the singer whose low voice provides a great contrast to the instrumentalists. He also helps with audio engineering.<br><br> "I've been singing in the shower and car for my entire life, but I started choir in 6th grade and haven't stoppedsince."</div>
+          <ul>
+            <li><a href="https://www.instagram.com/connorb13/"><img src="images/instagramlogo.png" alt="instagram logo" class="link"></a></li>
+            <li><a href="https://soundcloud.com/vinylwaste"><img src="images/soundcloud.png" alt="soundcloud logo" class="link"></a></li>
+          </ul>
         </div>
 
       </div>
