--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!--Section C-->
     <section id="c" class="grid">
       <div class="content-wrap">
-        <h1>Who is vinylWASTE?</h1>
+        <h1>Who <a href="randomgarbage.html" style="color: #E0FBAE;">is</a> vinylWASTE?</h1>
         <div class="content-wrap">
           <p>Haymarket, Virginia’s vinylWASTE is living proof that raw talent, ambition, and honesty can still succeed in an ailing music industry. By aligning their unwavering dedication to the do-it-yourself work ethic with a signature sound, members of
             the band provide a unique variety of sounds and genres that cannot be found anywhere else, ranging from jazz, funk, hip hop, and electronic
@@ -66,6 +66,7 @@
         <div class="d-1">
           <h3>Contact Us</h3>
           <ul>
+            <li><a href="https://soundcloud.com/codyroses"><img src="images/soundcloud.png" alt="soundcloud logo" class="link"></a></li>
             <li><a href="https://www.instagram.com/?hl=en"><img src="images/instagramlogo.png" alt="instagram logo" class="link"></a></li>
             <li><a href="https://twitter.com/?lang=en"><img src="images/twitterlogo.png" alt="instagram logo" class="link"></a></li>
             <li><a href="https://www.youtube.com/"><img src="images/youtubelogo.png" alt="instagram logo" class="link"></a></li>
